--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "blade-ui-kit/blade-heroicons": "^2.4",
         "illuminate/contracts": "^10.0||^11.0",
         "livewire/livewire": "^3.5",
-        "spatie/laravel-package-tools": "^1.16"
+        "spatie/laravel-package-tools": "^1.16",
+        "torchlight/torchlight-laravel": "^0.6.0"
     },
     "require-dev": {
         "larastan/larastan": "^2.9",
