--- a/composer.json
+++ b/composer.json
@@ -18,23 +18,23 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.4",
-        "illuminate/contracts": "^10.0||^11.0",
+        "illuminate/contracts": "^10.0||^11.0||^12.0",
         "livewire/livewire": "^3.5",
         "spatie/laravel-package-tools": "^1.16",
         "torchlight/torchlight-laravel": "^0.6.0"
     },
     "require-dev": {
-        "larastan/larastan": "^2.9",
+        "larastan/larastan": "^2.9||^3.6",
         "laravel/pint": "^1.14",
-        "laravel/prompts": "^0.1.25",
+        "laravel/prompts": "^0.1.25||^0.3",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "orchestra/testbench": "^9.0.0||^8.22.0",
-        "pestphp/pest": "^2.34",
-        "pestphp/pest-plugin-arch": "^2.7",
-        "pestphp/pest-plugin-laravel": "^2.3",
+        "orchestra/testbench": "^9.0.0||^8.22.0||^10.0",
+        "pestphp/pest": "^2.34||^3.8",
+        "pestphp/pest-plugin-arch": "^2.7||^3.1",
+        "pestphp/pest-plugin-laravel": "^2.3||^3.2",
         "phpstan/extension-installer": "^1.3",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "phpstan/phpstan-phpunit": "^1.3"
+        "phpstan/phpstan-deprecation-rules": "^1.1||^2.0",
+        "phpstan/phpstan-phpunit": "^1.3||^2.0"
     },
     "autoload": {
         "psr-4": {
