--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest, windows-latest ]
-        php: [ 8.4, 8.3, 8.2 ]
+        php: [ 8.4, 8.3 ]
         laravel: [ 12.*, 11.*, 10.* ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
@@ -51,7 +51,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "nesbot/carbon:${{ matrix.os == 'windows-latest' && '^^^' || '' }}${{ matrix.carbon }}" --no-interaction --no-update
+          composer validate --strict
+          composer require --dev "orchestra/testbench:${{ matrix.testbench }}"
+          composer require "laravel/framework:${{ matrix.laravel }}"  "nesbot/carbon:${{ matrix.os == 'windows-latest' && '^^^' || '' }}${{ matrix.carbon }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: List Installed Dependencies
