--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,12 +12,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, windows-latest ]
-        php: [ 8.0, 8.1, 8.2, 8.3, 8.4 ]
-        laravel: [ 12.*, 11.*, 10.*, 9.* ]
+        php: [ 8.3, 8.4 ]
+        laravel: [ 12.*, 11.*, 10.* ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 9.*
-            testbench: 7.*
           - laravel: 10.*
             testbench: 8.*
           - laravel: 11.*
@@ -25,10 +23,6 @@ jobs:
           - laravel: 12.*
             testbench: 10.*
         exclude:
-          - laravel: 9.*
-            php: 8.3
-          - laravel: 9.*
-            php: 8.4
           - laravel: 10.*
             php: 8.0
           - laravel: 10.*
