♻️ (ci): Refactor GitHub Actions output handling
Update the way the composer cache directory is set in the GitHub Actions workflow. This change improves compatibility with the latest GitHub Actions syntax by using the recommended method for setting output variables.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: "Determine composer cache directory"
         id: "composer-cache-directory"
-        run: "echo \"::set-output name=directory::$(composer config cache-dir)\""
+        run: "echo \"directory=$(composer config cache-dir)\" >> $GITHUB_OUTPUT"
 
       - name: Cache php extensions & composer downloads
         uses: actions/cache@v4
